syntax = "proto3";

package grpc_demo;


service GrpcDemo {
    rpc generate_seq(String) returns (String) {}

    rpc generate_seq_stream(String) returns (stream String) {}
};

message String {
    string str = 1;
};